--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,8 +1,8 @@
 name: EnderContainers
 author: Utarwyn
-version: 1.0.5
+version: 1.0.6
 main: fr.utarwyn.endercontainers.EnderContainers
-softdepend: [Factions, mcore]
+softdepend: [Factions, mcore, PlotSquared]
 commands:
   endercontainers:
     aliases: [enderc, endc, enc, ecp]
