--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: EnderContainers
 author: Utarwyn
-version: 1.0.6
+version: 1.0.6b
 main: fr.utarwyn.endercontainers.EnderContainers
 softdepend: [Factions, mcore, PlotSquared]
 commands:
