--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: EnderContainers
 author: Utarwyn
-version: 1.0.6b
+version: 1.0.7
 main: fr.utarwyn.endercontainers.EnderContainers
 softdepend: [Factions, mcore, PlotSquared]
 commands:
@@ -9,6 +9,6 @@ commands:
     description: Allow you to create multiple ender containers
     usage: "Usage: /endercontainers help"
   enderchest:
-    aliases: [ec, enderc, enderch, endchest]
+    aliases: [ec, enderc, enderch, echest, endchest]
     description: Allow you to open an enderchest anywhere
     usage: "Usage: /enderchest [number]"
