--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: EnderContainers
 author: Utarwyn
-version: 1.0.8b
+version: 1.0.9
 main: fr.utarwyn.endercontainers.EnderContainers
 softdepend: [Factions, mcore, PlotSquared, Citizens]
 commands:
