--- a/src/config.yml
+++ b/src/config.yml
@@ -1,6 +1,6 @@
 ###
 #   EnderContainers configuration
-#   Version: 1.0.9
+#   Version: 1.0.9c
 #   An enderchests plugin by Utarwyn
 ###
 
@@ -74,4 +74,4 @@ others:
 
 
 # Please don't touch this
-saveVersion: '1.0.9b'
+saveVersion: '1.0.9c'
