--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: EnderContainers
 author: Utarwyn
 version: 2.0.0
 main: fr.utarwyn.endercontainers.EnderContainers
-softdepend: [Factions, mcore, PlotSquared, Citizens]
+softdepend: [Factions, PlotSquared, Citizens]
 commands:
   endercontainers:
     aliases: [enderc, endc, enc, ecp]
