--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: EnderContainers
 author: Utarwyn
 version: 2.1.0
 main: fr.utarwyn.endercontainers.EnderContainers
+api-version: 1.13
 softdepend: [Factions, PlotSquared, Citizens]
 commands:
   endercontainers:
