Wrap SQL table names and columns with quotes Refactoring the Database class to remove some useless methods

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -15,7 +15,7 @@ locale: en
 
 # A list of worlds in which the plugin will be automatically disabled
 disabledWorlds:
-  - 'example'
+  - 'my_disabled_world'
 
 
 # Enderchests configuration
