--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,18 @@
 language: java
+sudo: false
+install: true
+
 jdk:
   - oraclejdk8
-install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -DoutputDirectory="./" -B -V
+
+script:
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+    - '$HOME/.sonar/cache'
+
+addons:
+  sonarcloud:
+    organization: "utarwyn-github"
