--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <worldguard.old.version>6.1.1-SNAPSHOT</worldguard.old.version>
         <factions.version>2.12.1</factions.version>
         <factions.legacy.version>1.6.9.5-U0.2.2</factions.legacy.version>
-        <plotsquared.version>latest</plotsquared.version>
+        <plotsquared.version>4.226</plotsquared.version>
         <bstats.version>1.2</bstats.version>
         <junit.version>4.11</junit.version>
 
@@ -55,7 +55,7 @@
         </repository>
         <repository>
             <id>plotsquared-repo</id>
-            <url>http://ci.athion.net/job/PlotSquared-Releases/ws/mvn/</url>
+            <url>https://ci.athion.net/job/PlotSquared-Releases/ws/mvn/</url>
         </repository>
         <repository>
             <id>factions-repo</id>
