--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <plotsquared.version>4.226</plotsquared.version>
         <bstats.version>1.2</bstats.version>
         <junit.version>4.11</junit.version>
+        <powermock.version>1.4.9</powermock.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -175,6 +176,20 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>${powermock.version}</version>
+            <type>jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>${powermock.version}</version>
+            <type>jar</type>
             <scope>test</scope>
         </dependency>
 
