--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <plotsquared.version>4.226</plotsquared.version>
         <bstats.version>1.2</bstats.version>
         <mockito.version>2.28.2</mockito.version>
+        <assertj.version>3.11.1</assertj.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -175,6 +176,13 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
 
