--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,14 @@
     <properties>
         <bukkit.version>1.14.4-R0.1-SNAPSHOT</bukkit.version>
         <dbcp.version>2.1.1</dbcp.version>
-        <citizensapi.version>2.0.23-SNAPSHOT</citizensapi.version>
+        <citizensapi.version>2.0.25-SNAPSHOT</citizensapi.version>
         <worldguard.version>7.0.0-SNAPSHOT</worldguard.version>
         <worldguard.old.version>6.1.1-SNAPSHOT</worldguard.old.version>
         <factions.version>2.12.1</factions.version>
         <factions.legacy.version>1.6.9.5-U0.2.2</factions.legacy.version>
         <plotsquared.version>4.226</plotsquared.version>
         <bstats.version>1.2</bstats.version>
+        <junit.version>4.12</junit.version>
         <mockito.version>2.28.2</mockito.version>
         <assertj.version>3.11.1</assertj.version>
 
@@ -172,13 +173,19 @@
             </exclusions>
         </dependency>
 
+        <!-- Testing dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
