--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,21 @@
 
     <groupId>fr.utarwyn</groupId>
     <artifactId>EnderContainers</artifactId>
-    <version>2.1.0</version>
+    <version>2.2.0</version>
     <packaging>jar</packaging>
 
     <name>EnderContainers</name>
     <description>A Bukkit plugin to create multiple enderchests in one simply</description>
     <url>https://github.com/utarwyn/EnderContainers</url>
     <inceptionYear>2015</inceptionYear>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Utarwyn Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/utarwyn/EnderContainers</url>
+        </repository>
+    </distributionManagement>
 
     <licenses>
         <license>
