--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,14 @@ dist: trusty
 sudo: false
 install: true
 
+git:
+  depth: false
+
 jdk:
   - oraclejdk8
 
 script:
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+  - mvn clean verify sonar:sonar -Pcoverage
 
 cache:
   directories:
