--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ jdk:
   - oraclejdk8
 
 script:
-  - mvn clean verify sonar:sonar -Pcoverage
+  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then mvn clean verify sonar:sonar -Pcoverage; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then mvn clean install; fi'
 
 cache:
   directories:
