Fix saving of enderchests for offline players (#29)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,4 @@ author: Utarwyn
 version: 2.2.0
 main: fr.utarwyn.endercontainers.EnderContainers
 api-version: "1.13"
-softdepend: [Factions, PlotSquared, Citizens, Essentials, WorldGuard]
+softdepend: [Factions, PlotSquared, Essentials, WorldGuard]
