--- a/dependencies/PlotSquared/pom.xml
+++ b/dependencies/PlotSquared/pom.xml
@@ -15,18 +15,18 @@
     <name>EnderContainers Dependency PlotSquared</name>
 
     <properties>
-        <plotsquared.version>4.453</plotsquared.version>
+        <plotsquared.version>5.1</plotsquared.version>
         <worldedit.version>7.2.0-SNAPSHOT</worldedit.version>
     </properties>
 
     <repositories>
         <repository>
-            <id>plotsquared-repo</id>
-            <url>https://ci.athion.net/job/PlotSquared-Releases/ws/mvn/</url>
+            <id>enginehub</id>
+            <url>https://maven.enginehub.org/repo/</url>
         </repository>
         <repository>
-            <id>worldedit-repo</id>
-            <url>https://maven.sk89q.com/repo/</url>
+            <id>plotsquared</id>
+            <url>https://plotsquared.com/mvn/</url>
         </repository>
     </repositories>
 
@@ -37,14 +37,8 @@
             <version>2.2.0</version>
         </dependency>
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>${bukkit-api.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.github.intellectualsites.plotsquared</groupId>
-            <artifactId>PlotSquared-API</artifactId>
+            <groupId>com.plotsquared</groupId>
+            <artifactId>PlotSquared</artifactId>
             <version>${plotsquared.version}</version>
             <scope>provided</scope>
             <exclusions>
@@ -56,15 +50,9 @@
         </dependency>
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
-            <artifactId>worldedit-core</artifactId>
+            <artifactId>worldedit-bukkit</artifactId>
             <version>${worldedit.version}</version>
             <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
 
