--- a/dependencies/WorldGuard7/pom.xml
+++ b/dependencies/WorldGuard7/pom.xml
@@ -20,8 +20,8 @@
 
     <repositories>
         <repository>
-            <id>worldedit-repo</id>
-            <url>https://maven.sk89q.com/repo/</url>
+            <id>enginehub</id>
+            <url>https://maven.enginehub.org/repo/</url>
         </repository>
     </repositories>
 
@@ -31,7 +31,6 @@
             <artifactId>endercontainers-api</artifactId>
             <version>2.2.0</version>
         </dependency>
-
         <dependency>
             <groupId>com.sk89q.worldguard</groupId>
             <artifactId>worldguard-bukkit</artifactId>
@@ -39,5 +38,4 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
 </project>
