--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
         </license>
     </licenses>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Utarwyn Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/utarwyn/EnderContainers</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
